Added more ignores

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 *~
 cwdwplug/cwdwplug.xcodeproj/xcuserdata/
 eyetvCamd/eyetvCamd.xcodeproj/xcuserdata/
+cwdwplug/cwdwplug.xcodeproj/project.xcworkspace/
+eyetvCamd/eyetvCamd.xcodeproj/project.xcworkspace/
+
