--- a/cwdwplug/Info.plist
+++ b/cwdwplug/Info.plist
@@ -7,9 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleGetInfoString</key>
-	<string>cwdwplug version 1.3</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>cwdwplug version 2.0b2</string>
 	<key>CFBundleIdentifier</key>
 	<string>cwdwplug</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -18,11 +16,11 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.0b2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.3</string>
-	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>2.0b2</string>
 </dict>
 </plist>
